--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+// You can add global styles to this file, and also import other style files
+@import '~bootstrap/dist/css/bootstrap.css';
+
+// Move down content because we have a fixed navbar that is 3.5rem tall
+body {
+  padding-top: 3.5rem;
+}
+
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
