--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,20 +16,22 @@
         <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
       </li>
       <ng-template #anonymousUser>
-        <li class="nav-item" *ngIf="!(authService.user$ | async)">
+        <li class="nav-item">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
       </ng-template>
       <li class="nav-item dropdown" ngbDropdown
-        *ngIf="(authService.user$ | async) as user; else anonymousUser">
+        *ngIf="appUser; else anonymousUser">
         <a class="nav-link dropdown-toggle" id="dropdown01" ngbDropdownToggle
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          {{user?.displayName || "logging in ..."}}
+          {{appUser?.name || "logging in ..."}}
         </a>
         <div class="dropdown-menu" aria-labelledby="dropdown01" ngbDropdownMenu>
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-          <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-          <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+          <ng-container *ngIf="appUser.isAdmin">
+            <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+            <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+          </ng-container>
           <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
       </li>
