--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -28,7 +28,7 @@
 
     <ng-container matColumnDef="price">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Price </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.price | currency:'USD':true}} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{element.price | currency:'USD':'symbol'}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="actions">
