--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,66 @@
 <p>
   signup works!
 </p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+
+      <form #signUpForm="ngForm"
+        class="form-horizontal"
+        (ngSubmit)="submitSignUp(signUpForm)"
+        novalidate="">
+        <fieldset>
+          <div id="legend">
+            <legend class="">Email Sign Up</legend>
+          </div>
+
+          <div class="example-container">
+
+            <mat-form-field>
+              <input
+                name="userName"
+                matInput
+                placeholder="Enter your username"
+                [(ngModel)]="credentials.userName">
+            </mat-form-field>
+            <mat-form-field>
+              <input
+                name="email"
+                matInput
+                placeholder="Enter your email"
+                [(ngModel)]="credentials.email"
+                [formControl]="email" required>
+              <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-form-field>
+            <mat-form-field>
+              <input
+                name="password"
+                matInput
+                placeholder="Enter your password"
+                [(ngModel)]="credentials.password"
+                [type]="hide ? 'password' : 'text'">
+              <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+            </mat-form-field>
+            <mat-form-field>
+              <input
+                name="confirm"
+                matInput
+                placeholder="Confirm your password"
+                [(ngModel)]="confirmPassword"
+                [type]="hide ? 'password' : 'text'">
+            </mat-form-field>
+
+          </div>
+
+          <div class="control-group">
+            <!-- Button -->
+            <div class="controls">
+              <button class="btn btn-success" type="submit">Sign Up</button>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+
+    </div>
+  </div>
+</div>
