Adds room cards

--- a/src/app/chat/components/activator/activator.component.html
+++ b/src/app/chat/components/activator/activator.component.html
@@ -7,7 +7,7 @@
 <!-- <div class="node is-collapsed row align-middle" *ngIf="!openState" (click)="toggleActivator($event)">
   <i class="fa fa-chevron-left fa-1x fa-center"></i>
 </div> -->
-<div *ngIf="openState">
+<div *ngIf="openState" class="activator">
   <mat-accordion>
     <!-- <mat-expansion-panel [expanded]="true"> -->
     <mat-expansion-panel
