--- a/src/app/chat/components/activator/activator.component.scss
+++ b/src/app/chat/components/activator/activator.component.scss
@@ -1,16 +1,19 @@
 @import "../_chat-settings.scss";
 
-.chat-user-list {
-  width: 100%;
+.activator {
+  padding: 2px 2px 2px 25px
 }
+// .chat-user-list {
+//   width: 100%;
+// }
 
-.rooms-node {
-  width: 6rem;
-}
+// .rooms-node {
+//   width: 6rem;
+// }
 
-.users-node {
-  width: 6rem;
-}
+// .users-node {
+//   width: 6rem;
+// }
 
 .example-button-row {
   display: flex;
