--- a/src/app/chat/components/room-card/room-card.component.html
+++ b/src/app/chat/components/room-card/room-card.component.html
@@ -12,6 +12,47 @@
     <p>
       Messages here
     </p>
+    <!-- <div class="row content" *ngIf="!minimized"> -->
+    <div class="row">
+      <!-- <div class="col small messages expand"> -->
+      <!-- <div class="col messages"> -->
+      <div class="col">
+        <form (ngSubmit)="submitMessage(newMessageForm)" novalidate autocomplete="off" #newMessageForm="ngForm">
+          <!-- <div class="messages-frame" #messagesFrame> -->
+          <div #messagesFrame>
+            <!-- <div class="message-row message" *ngIf="compositeMessages.length===0"> -->
+            <div *ngIf="compositeMessages.length===0">
+              <p>There are no messages yet.</p>
+              <p>Why don't you start the conversation?</p>
+              <!-- <div class="spacer-1rem"></div> -->
+            </div>
+            <div *ngIf="compositeMessages.length&gt;0">
+              <!-- <div class="message-row" *ngFor="let compositeMessage of compositeMessages; let i = index"> -->
+              <div *ngFor="let compositeMessage of compositeMessages; let i = index">
+                <chat-composite-message [compositeMessage]="compositeMessage" [messagesReadTime]="messagesReadTime"></chat-composite-message>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="input-group message-text"> -->
+          <!-- <div>
+            <input class="input-group-field" type="text" name="newMessageText" #messagesInput autofocus required #newMessageInput="ngModel"
+              ngModel>
+            <div class="input-group-button">
+              <button class="button small" type="submit">Send</button>
+            </div>
+          </div> -->
+        </form>
+      </div>
+      <!-- <div class="column small-4" *ngIf="showParticipantColumn()">
+        <div class="participants">
+          <h4>Participants</h4>
+          <div *ngIf="theParticipants?.length===0">No users</div>
+          <div class="user-row row" *ngFor="let user of theParticipants; let i = index">
+            <div class="column small-12" [ngClass]="{'logged-in': user.loggedIn}">{{ user.name }}</div>
+          </div>
+        </div>
+      </div> -->
+    </div>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>LIKE</button>
