--- a/src/app/chat/components/room-card/room-card.component.scss
+++ b/src/app/chat/components/room-card/room-card.component.scss
@@ -1,3 +1,5 @@
+@import "../_chat-settings.scss";
+
 .example-card {
   width: 100%;
 }
@@ -5,4 +7,44 @@
 .example-header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
+}
+
+.messages {
+  min-width: 20rem;
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
+
+.messages-frame {
+  position: relative;
+  padding: 0;
+  border-bottom: solid 1px #dddddd;
+  background-color: #ffffff;
+  overflow-x : auto;
+  overflow-y : scroll;
+  height: calc(24.5rem + 1px);
+  max-height: calc(100vh - 6rem + 1px);
+  width: 100%;
+  background-color: $near-white;
+}
+
+.messages-frame .message-row {
+  width: 100%;
+  word-break: break-all;
+  word-wrap: break-word;
+  border-bottom: solid 1px #dddddd;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+}
+
+.messages-frame .message-row:nth-child(odd) {
+  background-color: $near-white;
+}
+
+.messages-frame .message-row:nth-child(even) {
+  background-color: $light-gray;
+}
+
+.messages-frame .message-row:last-child {
+  border-bottom: 0;
 }
