Improves chat-store

--- a/src/app/chat/components/windows/windows.component.html
+++ b/src/app/chat/components/windows/windows.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="row container" *ngIf="atLeastOneRoom"> -->
 <div class="row" *ngIf="atLeastOneRoom" [style.width]="containerWidth">
   <div class="col" *ngFor="let roomId of openRoomIds">
-    <chat-room-card [roomId]="roomId"></chat-room-card>
+    <chat-room-card [roomId]="roomId" [localUser]="localUser"></chat-room-card>
   </div>
   <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
 </div>
