Requires login to chat

--- a/src/app/chat/components/activator/activator.component.html
+++ b/src/app/chat/components/activator/activator.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="!openState && me.id">
+<div class="row" *ngIf="!openState">
   <button mat-button color="primary" (click)="toggleActivator($event)">
     <i class="fa fa-chevron-left fa-1x fa-center"></i>
     Chat
