--- a/src/app/chat/components/main/main.component.html
+++ b/src/app/chat/components/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="chat-controller">
+<div class="chat-controller" *ngIf="isLoggedIn">
   <chat-activator class="chat-display-options chat-activator"></chat-activator>
   <chat-windows class="chat-display-options"></chat-windows>
 </div>
