--- a/src/app/chat/components/room-card/room-card.component.html
+++ b/src/app/chat/components/room-card/room-card.component.html
@@ -1,19 +1,10 @@
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-  <!-- Navbar content -->
-  <div class="container">
-    <h4 class="card-title">{{ room.description }}</h4>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="nav-item active">
-        <button type="button" class="btn btn-primary" (click)="minimize()">Minimize</button>
-      </li>
-      <li class="nav-item active">
-        <button type="button" class="btn btn-primary" (click)="close()">Close</button>
-      </li>
-    </ul>
-  </div>
-</nav>
-<div class="card">
+<div class="card example-card">
   <div class="card-body">
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+      <h5 class="my-0 mr-md-auto font-weight-normal">{{ room.description }}</h5>
+      <a class="btn btn-outline-primary" (click)="minimize()">Minimize</a>
+      <a class="btn btn-outline-primary" (click)="close()">Close</a>
+    </div>
     <p class="card-text">{{ participants }}</p>
     <div class="row">
       <div class="col">
