--- a/src/app/chat/components/room-card/room-card.component.scss
+++ b/src/app/chat/components/room-card/room-card.component.scss
@@ -38,7 +38,8 @@ $chat-room-margin: 0px 0.25rem 0 0;
   flex: 1 1 auto;
 }
 .example-card {
-  width: 250px;
+  width: 100%;
+  height: 100%;
 }
 
 .example-header-image {
