--- a/src/app/chat/components/windows/windows.component.scss
+++ b/src/app/chat/components/windows/windows.component.scss
@@ -1,35 +1,18 @@
 @import "../_chat-settings.scss";
-$chat-room-margin: 0px 0.25rem 0 0;
 
-.chat-windows {
-  align-items: flex-end;
-  margin-bottom: 1px;
+.my-flex-container {
+  border: 2px solid green;
+  height: 300px;
+  margin-bottom: 20px;
 }
-.container {
-  width: 750px;
-}
-.tile {
-  background: lightblue;
-}
-
-// .node {
-//   height: 2.5rem;
-//   padding: 8px 4px 4px 14px;
-//   background-color: $off-black;
-//   color: $dark-gray;
-//   margin: 1px 1px 1px 1px;
-//   border-left: 1px;
-//   min-width: 2.5rem;
-//   &.expanded {
-//     width: $node-width;
-//   }
-//   // &.is-collapsed {
-//   //   padding: 0;
-//   // }
-//   &:hover {
-//     background-color: $dark-gray;
-//     border: 1px solid black;
-//     color: $light-gray;
-//   }
-//   pointer-events:all;
+// .my-flex-container-column {
+//   border: 2px solid green;
+//   height: 200px;
+//   margin-bottom: 20px;
 // }
+.my-flex-item {
+  background-color: lightgrey;
+  border: 1px dotted grey;
+  height: 400px;
+  width: 300px;
+}
