--- a/src/app/chat/components/room-card/room-card.component.html
+++ b/src/app/chat/components/room-card/room-card.component.html
@@ -11,17 +11,31 @@
       </a>
     </div>
     <p class="card-text">{{ participants }}</p>
-    <div class="row">
+    <div class="row" *ngIf="!minimized">
       <div class="col">
-        <div *ngIf="compositeMessages.length===0">
-          <p>There are no messages yet.</p>
-          <p>Why don't you start the conversation?</p>
-        </div>
-        <div *ngIf="compositeMessages.length">
-          <div *ngFor="let compositeMessage of compositeMessages; let i = index">
-            <chat-composite-message [compositeMessage]="compositeMessage" [messagesReadTime]="messagesReadTime"></chat-composite-message>
+        <form (ngSubmit)="submitMessage(newMessageForm)" novalidate autocomplete="off" #newMessageForm="ngForm">
+          <div *ngIf="compositeMessages.length===0">
+            <p>There are no messages yet.</p>
+            <p>Why don't you start the conversation?</p>
           </div>
-        </div>
+          <div *ngIf="compositeMessages.length">
+            <div *ngFor="let compositeMessage of compositeMessages; let i = index">
+              <chat-composite-message [compositeMessage]="compositeMessage" [messagesReadTime]="messagesReadTime"></chat-composite-message>
+            </div>
+          </div>
+          <div class="input-group message-text">
+            <input
+              class="input-group-field"
+              type="text"
+              name="newMessageText"
+              #messagesInput autofocus required
+              #newMessageInput="ngModel"
+              ngModel>
+            <div class="input-group-button">
+              <button class="button small" type="submit">Send</button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
