--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -34,7 +34,7 @@
           <div class="control-group">
             <!-- Button -->
             <div class="controls">
-              <button class="btn btn-success" type="submit">Login</button>
+              <button class="btn btn-success nav-item" type="submit">Login</button>
             </div>
           </div>
           <p class="text-center expanded">
