--- a/src/app/chat/components/main/main.component.html
+++ b/src/app/chat/components/main/main.component.html
@@ -26,12 +26,96 @@
   <!-- <div class="container collapse"> -->
   <div class="container">
   <ngb-tabset type="pills" justify="end">
-    <ngb-tab title="Friends">
+    <ngb-tab title="Users Online">
       <ng-template ngbTabContent>
-        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master
-          cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher
-          synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan
-          aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+
+        <!-- Users -->
+        <div class="d-flex justify-content-end flex-wrap row-chat">
+
+          <div class="m-2 item-chat">
+            <!-- user card -->
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title">
+                  <img src="https://www.gravatar.com/avatar/1552e84a05a43a28eb321641d31c63ed?s=40" />
+                  <div class="d-inline-block user-name">
+                    <h4 class="mx-auto text-center">Alice</h4>
+                  </div>
+                  <a class="btn-sm btn-info cursor-pointer float-right text-white">
+                    Chat
+                    <!-- <i class="fa fa-times fa-1"></i> -->
+                  </a>
+                </div>
+                <p class="card-text user-area">
+                  Add options here: add to my user list; ignore etc
+                </p>
+                <!-- <a class="btn btn-danger" href="#">Read More</a> -->
+              </div>
+            </div>
+            <!-- end user card -->
+          </div>
+
+          <div class="m-2 item-chat">
+            <!-- user card -->
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title">
+                  <img src="https://www.gravatar.com/avatar/0552e84a05a43a28eb321641d31c63ed?s=40" />
+                  <h4 class="d-inline mx-2">Alice</h4>
+                  <a class="btn-sm btn-info cursor-pointer float-right text-white">
+                    Chat
+                    <!-- <i class="fa fa-times fa-1"></i> -->
+                  </a>
+                </div>
+                <p class="card-text user-area">
+                  Add options here: add to my user list; ignore etc
+                </p>
+                <!-- <a class="btn btn-danger" href="#">Read More</a> -->
+              </div>
+            </div>
+            <!-- end user card -->
+          </div>
+          <div class="m-2 item-chat">
+            <!-- user card -->
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title">
+                  <h4 class="d-inline mr-2">Alice</h4>
+                  <a class="btn-sm btn-info cursor-pointer float-right">
+                    Chat
+                    <!-- <i class="fa fa-times fa-1"></i> -->
+                  </a>
+                </div>
+                <p class="card-text user-area">
+                  Add options here: add to my user list; ignore etc
+                </p>
+                <!-- <a class="btn btn-danger" href="#">Read More</a> -->
+              </div>
+            </div>
+            <!-- end user card -->
+          </div>
+          <div class="m-2 item-chat">
+            <!-- user card -->
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title">
+                  <h4 class="d-inline mr-2">Alice</h4>
+                  <a class="btn-sm btn-info cursor-pointer float-right">
+                    Chat
+                    <!-- <i class="fa fa-times fa-1"></i> -->
+                  </a>
+                </div>
+                <p class="card-text user-area">
+                  Add options here: add to my user list; ignore etc
+                </p>
+                <!-- <a class="btn btn-danger" href="#">Read More</a> -->
+              </div>
+            </div>
+            <!-- end user card -->
+          </div>
+        </div>
+        <!-- End Users -->
+
       </ng-template>
     </ngb-tab>
     <ngb-tab title="All Users">
