--- a/src/app/chat/components/main/main.component.scss
+++ b/src/app/chat/components/main/main.component.scss
@@ -16,6 +16,14 @@
   height: 300px;
 }
 
+.user-area {
+  height: auto;
+}
+
+.user-name {
+  width: 125px;
+}
+
 .chat-display-options {
   display: flex;
   align-items: flex-end;
