--- a/src/app/chat/components/main/main.component.html
+++ b/src/app/chat/components/main/main.component.html
@@ -32,7 +32,7 @@
         <!-- Users -->
         <div class="d-flex justify-content-end flex-wrap row-chat">
 
-          <div class="m-2 item-chat">
+          <div class="m-2 item-user">
             <!-- user card -->
             <div class="card">
               <div class="card-body">
@@ -46,73 +46,48 @@
                     <!-- <i class="fa fa-times fa-1"></i> -->
                   </a>
                 </div>
-                <p class="card-text user-area">
-                  Add options here: add to my user list; ignore etc
-                </p>
+                <div class="d-flex flex-row">
+                  <div class="px-2 align-self-start">
+                    <i class="fa fa-user"></i>
+                  </div>
+                  <div class="px-2 align-self-end">
+                    In my user list
+                  </div>
+                </div>
                 <!-- <a class="btn btn-danger" href="#">Read More</a> -->
               </div>
             </div>
             <!-- end user card -->
           </div>
 
-          <div class="m-2 item-chat">
+          <div class="m-2 item-user">
             <!-- user card -->
             <div class="card">
               <div class="card-body">
                 <div class="card-title">
-                  <img src="https://www.gravatar.com/avatar/0552e84a05a43a28eb321641d31c63ed?s=40" />
-                  <h4 class="d-inline mx-2">Alice</h4>
+                  <img src="https://www.gravatar.com/avatar/1552e84a05a43a28eb321641d31c63ed?s=40" />
+                  <div class="d-inline-block user-name">
+                    <h4 class="mx-auto text-center">Rob</h4>
+                  </div>
                   <a class="btn-sm btn-info cursor-pointer float-right text-white">
                     Chat
                     <!-- <i class="fa fa-times fa-1"></i> -->
                   </a>
                 </div>
-                <p class="card-text user-area">
-                  Add options here: add to my user list; ignore etc
-                </p>
-                <!-- <a class="btn btn-danger" href="#">Read More</a> -->
-              </div>
-            </div>
-            <!-- end user card -->
-          </div>
-          <div class="m-2 item-chat">
-            <!-- user card -->
-            <div class="card">
-              <div class="card-body">
-                <div class="card-title">
-                  <h4 class="d-inline mr-2">Alice</h4>
-                  <a class="btn-sm btn-info cursor-pointer float-right">
-                    Chat
-                    <!-- <i class="fa fa-times fa-1"></i> -->
-                  </a>
+                <div class="d-flex flex-row">
+                  <div class="px-2 align-self-start nav-item">
+                    <i class="fa fa-user-plus"></i>
+                  </div>
+                  <div class="px-2 align-self-end">
+                    Add to my user list
+                  </div>
                 </div>
-                <p class="card-text user-area">
-                  Add options here: add to my user list; ignore etc
-                </p>
                 <!-- <a class="btn btn-danger" href="#">Read More</a> -->
               </div>
             </div>
             <!-- end user card -->
           </div>
-          <div class="m-2 item-chat">
-            <!-- user card -->
-            <div class="card">
-              <div class="card-body">
-                <div class="card-title">
-                  <h4 class="d-inline mr-2">Alice</h4>
-                  <a class="btn-sm btn-info cursor-pointer float-right">
-                    Chat
-                    <!-- <i class="fa fa-times fa-1"></i> -->
-                  </a>
-                </div>
-                <p class="card-text user-area">
-                  Add options here: add to my user list; ignore etc
-                </p>
-                <!-- <a class="btn btn-danger" href="#">Read More</a> -->
-              </div>
-            </div>
-            <!-- end user card -->
-          </div>
+
         </div>
         <!-- End Users -->
 
