--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,17 +1,14 @@
-<div class="jumbotron">
+<div class="jumbotron home-section">
   <div class="container">
     <h1 class="display-3">Hello, world!</h1>
     <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and
       three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p>Please check the example <a routerLink="/products">products</a> page</p>
+    <p>Please check the example <a class="text-dark" routerLink="/products">products</a> page</p>
     <p>
       <a class="btn btn-primary btn-lg" routerLink="/products" role="button">Products &raquo;</a>
     </p>
   </div>
-</div>
 
-<div class="container">
-  <!-- Example row of columns -->
   <div class="row">
     <div class="col-md-4">
       <h2>Heading</h2>
@@ -46,4 +43,3 @@
   <hr>
 
 </div>
-<!-- /container -->
