--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,48 +1,42 @@
-<p>
-  <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
-</p>
+<h1 class="text-center">Product and Services List</h1>
 
-<h1>Product and Services List</h1>
-<div class="example-container mat-elevation-z8">
+<div class="prod-container">
 
-  <div class="example-header">
-    <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
-    </mat-form-field>
+  <div style="margin: auto; max-width: 900px;">
+    <data-table [tableId]="tableId">
+      <data-table-column width="55px" [resizable]="true" header="URL">
+        <ng-template #dataTableCell let-item="item">
+          <div class="thumbnail" [style.backgroundImage]="'url(' + item.imageUrl +')'"></div>
+        </ng-template>
+      </data-table-column>
+      <data-table-column property="category" header="Category" sortable="true">
+      </data-table-column>
+      <data-table-column property="title" header="Title">
+      </data-table-column>
+      <data-table-column property="price" [sortable]="true" header="Price ($)">
+        <ng-template #dataTableCell let-item="item">
+          <span>{{ item.price | currency:'USD':'symbol' }}</span>
+        </ng-template>
+      </data-table-column>
+      <data-table-column header="Actions">
+        <ng-template #dataTableHeader let-item="item">
+          <i>Actions</i>
+        </ng-template>
+        <ng-template #dataTableCell let-item="item">
+          <button (click)="productClicked(item)" class="btn btn-sm btn-default">Edit</button>
+          <button (click)="productClicked(item)" class="btn btn-sm btn-default">Copy</button>
+        </ng-template>
+      </data-table-column>
+    </data-table>
+    <div>
+      <div>
+        <b>Selected:</b>
+        <span>{{ selectedRowIds.length }}</span>
+      </div>
+      <div *ngFor="let selected of selectedRowIds">
+        <span>{{ selected }}</span>
+      </div>
+    </div>
   </div>
 
-  <mat-table #table [dataSource]="dataSource" matSort>
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-    <ng-container matColumnDef="title">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Title </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.title }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="category">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Category </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.category }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="price">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Price </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.price | currency:'USD':'symbol' }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.id }}
-        <a [routerLink]="['/admin/products/'+element.key]">Edit</a>
-      </mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
-
-  <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]">
-  </mat-paginator>
 </div>
