--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <button class="btn btn-primary">{{ buttonText }}</button>
-      <button *ngIf="this.key" type="button" class="btn btn-danger" (click)="delete()">Delete</button>
+      <button *ngIf="!this.newProduct" type="button" class="btn btn-danger" (click)="delete()">Delete</button>
       <button type="button" class="btn btn-secondary" routerLink='/admin/products'>Cancel</button>
     </form>
     <!-- end form -->
