Updates data table to 0.2.1

--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -5,7 +5,7 @@
   <div style="margin: auto; max-width: 900px;">
 
     <data-table [tableId]="tableId">
-      <data-table-column
+      <!-- <data-table-column
         property="title"
         header="Title">
       </data-table-column>
@@ -29,7 +29,7 @@
           <button (click)="editProductClicked(item)" class="btn btn-sm btn-default">Edit</button>
           <button (click)="copyProductClicked(item)" class="btn btn-sm btn-default">Copy</button>
         </ng-template>
-      </data-table-column>
+      </data-table-column> -->
     </data-table>
 
   </div>
