--- a/src/app/admin/admin-products/admin-products.component.scss
+++ b/src/app/admin/admin-products/admin-products.component.scss
@@ -4,11 +4,11 @@
   min-width: 300px;
 }
 
-.thumbnail {
-  background-size: cover;
-  border-radius: 100%;
-  height: 40px;
-  width: 40px;
-  margin-top: 1px;
-  margin-bottom: 0px;
-}
+// .thumbnail {
+//   background-size: cover;
+//   border-radius: 100%;
+//   height: 40px;
+//   width: 40px;
+//   margin-top: 1px;
+//   margin-bottom: 0px;
+// }
