--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,32 @@
-// You can add global styles to this file, and also import other style files
+// required for angular material
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+// this is now included in html file cdn
 // @import '~bootstrap/dist/css/bootstrap.css';
-@import '~font-awesome/css/font-awesome.css';
+@import "~font-awesome/css/font-awesome.css";
 
 $theme-color: #008000;
-$theme-color-hover: #B1C522;
+$theme-color-hover: #b1c522;
 
 // Move down content because we have a fixed navbar that is 3.5rem tall
 body {
   padding-top: 4.5rem;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   margin-bottom: 1.5rem;
 }
 
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 .navbar-dark .navbar-brand {
   color: $theme-color;
 }
 
-.navbar-dark .navbar-brand:focus, .navbar-dark .navbar-brand:hover {
+.navbar-dark .navbar-brand:focus,
+.navbar-dark .navbar-brand:hover {
   color: $theme-color-hover;
 }
 
@@ -31,7 +37,7 @@ h1, h2, h3 {
 
 .badge-info {
   background-color: $theme-color;
-  color: #FFF;
+  color: #fff;
 }
 
 // .btn-primary {
