--- a/src/app/admin/admin-products/admin-products.component.scss
+++ b/src/app/admin/admin-products/admin-products.component.scss
@@ -1,14 +1,57 @@
-.prod-container {
+.product-container {
   display: flex;
   flex-direction: column;
+  // float: center;
+  max-width: 700px;
   min-width: 300px;
 }
 
+.product-header {
+  min-height: 64px;
+  padding: 8px 24px 0px 24px;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 50%;
+}
+
+.button-row {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+
+.mat-table {
+  max-height: 600px;
+  overflow: auto;
+}
+
+.mat-column-price {
+  max-width: 64px;
+}
+
+.mat-column-category {
+  max-width: 100px;
+}
+
+.mat-column-image-url {
+  background-size: cover;
+  border-radius: 100%;
+  height: 40px;
+  margin-bottom: 0;
+  margin-top: 1px;
+  max-width: 40px;
+}
+
+// .mat-header-row {
+//   margin-bottom: 0px;
+// }
 // .thumbnail {
 //   background-size: cover;
 //   border-radius: 100%;
 //   height: 40px;
-//   width: 40px;
+//   margin-bottom: 0;
 //   margin-top: 1px;
-//   margin-bottom: 0px;
+//   max-width: 40px;
 // }
