Fixes image size with crop div

--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,19 +1,15 @@
 <div *ngIf="product.title" class="card">
-  <img *ngIf="product.imageUrl" class="card-img-top" [src]="product.imageUrl" alt="{{product.title}}">
+  <div class="crop">
+    <img *ngIf="product.imageUrl" class="card-img-top" [src]="product.imageUrl" alt="{{product.title}}">
+  </div>
   <div class="card-body">
     <h4 class="card-title">{{ product.title }}</h4>
     <p class="card-text">{{ product.price | currency:'USD':'symbol' }}</p>
   </div>
   <div *ngIf="showActions && cart" class="card-footer">
-      <button
-        *ngIf="cart.getQuantity(product) === 0; else updateQuantity"
-        (click)="updateCart()"
-        class="btn btn-secondary btn-block">Add to Cart</button>
-      <ng-template #updateQuantity>
-        <app-product-quantity
-          [product]="product"
-          [cart]="cart"
-        ></app-product-quantity>
-      </ng-template>
+    <button *ngIf="cart.getQuantity(product) === 0; else updateQuantity" (click)="updateCart()" class="btn btn-secondary btn-block">Add to Cart</button>
+    <ng-template #updateQuantity>
+      <app-product-quantity [product]="product" [cart]="cart"></app-product-quantity>
+    </ng-template>
   </div>
 </div>
