--- a/src/app/shared/components/product-card/product-card.component.scss
+++ b/src/app/shared/components/product-card/product-card.component.scss
@@ -1,3 +1,5 @@
+$image-margin: -75px 0 0 -100px;
+
 .card-footer {
   padding: 0;
 
@@ -8,4 +10,10 @@
 
 .card {
   margin-bottom: 30px;
+}
+
+.crop {
+  width: 395px;
+  height: 395px;
+  overflow: hidden;
 }
